--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 				<div class="info ba-width-1-2">
 					<div class="ba-width-4-6">
 						<h1 class="info__title">Fresh Life</h1>
-						<p class="info__subtitle">Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+						<p class="info__subtitle">Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud ullamco.</p>
 						<div class="ba-width-1-2">
 						<a href="#" class="info__btn">get free now</a>
 						</div>
