added correct way to pictures

--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
 				</ul>
 				</div>
 			</div>
-			<h2>hello</h2>
 			</header>
 			<div class="ba-container">
 				<div class="info ba-width-1-2">
@@ -41,7 +40,7 @@
 					</div>
 				</div>
 				<a href="#about" class="info__scroll">
-				<img src="/img/scroll.png" alt="">
+				<img src="img/scroll.png" alt="">
 				</a>
 			</div>
 	</section>
@@ -125,7 +124,7 @@
 			</div>
 			<div class="ba-width-1-2">
 				<div class="item">
-				<img src="/img/gallery5.png" alt="">
+				<img src="img/gallery5.png" alt="">
 				<div class="item__overlay"></div>
 				</div>
 			</div>
